favicon et fix dark mode

--- a/static/style.css
+++ b/static/style.css
@@ -262,3 +262,7 @@ body {
     /* Les lettres se stabilisent */
   }
 }
+
+.file-info {
+  color: var(--main-color);
+}
